# counterfactual-planning

./: README.md
code/: CMakeLists.txt  Makefile  bandit.cpp  bandit.h  battleship.cpp  beliefstate.cpp  beliefstate.h  causal_planner.cpp  causal_planner.h  causal_ucb.h  experiment.cpp  experiment.h  mabuc.h  main.cpp  mcts.cpp  mcts.h  node.cpp  node.h  planner.cpp  planner.h  rocksample.cpp  simulator.h
